image: fence the JVM heap to the container limit — -Xmx = limit minus max(192 MiB, 15%), direct memory inside the reserve
docs/spec/jvm-memory.md (owner rulings 2026-09-14): the task's hard memory
limit is the only number an operator sets; no collector is pinned (ZGC
rejected on the 2026-09-06 measurements); the JVM's quarter-of-container
default is the defect. docker/jvm-opts.sh derives the two flags from the
cgroup v2/v1 limit (no limit or an operator JAVA_TOOL_OPTIONS -> nothing),
docker/entrypoint.sh execs java as PID 1; the same scripts go into the
bench image so what is measured is what is deployed. Server.start logs the
collector, heap and direct ceilings and processor count once at boot
(JvmInfo). JvmOptsScriptTest pins the table from 512 MiB to 256 GiB, the
no-limit and opt-out cases (15%->25% mutant killed); JvmInfoTest pins the
summary. Round 16 bench (2 CPUs, 2 GB, 200 conns, same day): Go 2,344 /
p99 102 ms; Java default 2,543 / 507; Java fenced 2,623 / 584 — the fence
is correct and free, and the p99 tail is admission queueing, not heap or
GC (backlog). Server 4,068 from clean.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CeP28brqSxWmKybFc3ayrp